#8 - Duong04 - Feature development
